--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -13,6 +13,7 @@
               </div>
               <div class="subheading mb-5"><a href="/pdf/CVPierreBeguin.pdf" target="_blank">Mon CV</a>
               </div>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/hOpOIe0qSJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             </div>
 
