--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -35,7 +35,7 @@
       {{ end }}
       {{ if .Site.Params.showExperience }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="/#experience">Expérience</a>
           </li>
       {{ end }}
       {{ if .Site.Params.showEducation }}
